<resources>
    <string name="app_name">EMSI-KEEP X App</string>
    <!-- Strings related to login -->
    <string name="prompt_email">entrer votre adresse-mail</string>
    <string name="prompt_password">entrer votre password</string>
    <string name="action_sign_in">SE CONNECTER</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="txt_google_sign_in_button">SE CONNECTER AVEC GOOGLE</string>
    <string name="title_activity_login">AUTHENTIFICATION</string>
    <string name="login_firebase">LOGIN-FIREBASE</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TEST EMSI KEEP</string>
    <string name="nav_header_subtitle">test@emsikeep.ma</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="appbar_scrolling_view_behavior" />
    <string name="title_activity_test">Test</string>
    <string name="app_short_name">EMSI-KEEP</string>
    <string name="cancel">ANNULER</string>
    <string name="validate">ENVOYER</string>
    <string name="add_professor">AJOUTER PROFESSEUR</string>
    <string name="required_fields">CHAMPS OBLIGATOIRE</string>
    <string name="added">AJOUTEE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
